terraform/module/security_groups/main.tf

# Security Group for ALB
resource "aws_security_group" "alb_sg" {
  name        = var.alb_security_group_name
  description = "Security group for the ALB"
  vpc_id      = var.alb_security_group_vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.alb_security_group_name
  }
}

# Security Group for Instances
resource "aws_security_group" "instance_sg" {
  name        = var.instance_security_group_name
  description = "Security group for the instances"
  vpc_id      = var.instance_security_group_vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.instance_security_group_name
  }
}
